# Meractorio

./: .gitignore  Dockerfile  README.md  docker-compose.yml  flake.nix  main.py  migrate.py  pyproject.toml  shell.py  test.py
mercatorio/: cache.py  firebase.py  scraper.py
mercatorio/airtable/: client.py  operation.py  static.py
mercatorio/airtable/operations/: __init__.py  regions.py  towns.py  towns_market.py
mercatorio/api/: api.py  base.py  common.py  map.py  towns.py
mercatorio/api/endpoints/: map.py  towns.py
