[tool.poetry]
name = "mercatorio"
version = "0.1.0"
description = "Automation for scraping Mercatorio"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
loguru = "^0.7.2"
click = "^8.1.7"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
